--- a/style.css
+++ b/style.css
@@ -88,10 +88,11 @@ ul {
 .leftbar {
   background: #dddddd;
   float: left;
-  height: 65%;
+  height: 100%;
   width: 200px;
   font-size: 1.5rem;
   padding: 20px 10px;
+  margin-bottom: 10px;
  
 }
 
@@ -104,7 +105,8 @@ ul {
 }
 
 @media only screen and (max-width: 1156px) {
-    .subheader {
-  
+    .
+    .subheader{
+     width: 60%;
     }
 }
