--- a/style.css
+++ b/style.css
@@ -93,6 +93,10 @@ ul {
   font-size: 1.5rem;
   padding: 20px 10px;
   margin-bottom: 10px;
+  display: block;
+
+
+  
  
 }
 
@@ -104,14 +108,3 @@ ul {
   padding-bottom: 10px;
 }
 
-@media only screen and (max-width: 1156px) {
-    .leftbar, .subheader {
-     
-       display: inline;
-        
-  
-    }
-    .subheader{
-     width: 60%;
-    }
-}
