--- a/style.css
+++ b/style.css
@@ -65,7 +65,6 @@ p {
   display: inline-block;
   vertical-align: middle;
   padding-top: 20px;
-
 }
 
 .subheader {
@@ -94,10 +93,6 @@ ul {
   padding: 20px 10px;
   margin-bottom: 10px;
   display: block;
-
-
-  
- 
 }
 
 .barimage {
@@ -108,3 +103,66 @@ ul {
   padding-bottom: 10px;
 }
 
+@media only screen and (max-width: 360px) {
+.subheader{
+  width: 60%;
+}
+
+  html, body {
+  margin: 5px;
+  padding: 0px;
+  font-family: 'Fira Sans Extra Condensed';
+  height: 100%;
+}
+
+header{
+  font-size: 1.3rem;
+}
+
+.image {
+  width: 150px;
+}
+
+h2{
+  font-size: 1.3rem;
+}
+
+h3 {
+  font-size: 1.2rem;
+  letter-spacing: 2px;
+}
+
+p{
+  font-size: 0.9rem;
+  margin-bottom: 30px;
+}
+
+.subimage{
+  width: 30px;
+  height: 30px;
+}
+
+.subheader{
+  margin: 5px;
+  width: 70%; 
+}
+
+.barimage{
+  width: 30px;
+  height: 30px;
+  padding-top: 0;
+}
+
+header, .leftbar{
+  display: block;
+  vertical-align: top;
+  
+}
+
+ .leftbar{
+  height: 260px;
+  width: 93%;
+  vertical-align: center;
+  }
+
+}
