--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-
 html, body {
   margin: 10px;
   padding: 0px;
@@ -40,6 +39,7 @@ h1{
   font-size: 2.5em;
   color: white;
   font-weight: 900;
+  padding: 0px 10px;
 }
 
 h2 {
@@ -75,6 +75,11 @@ p {
   padding-left: 10px;
   float: left;
   width: 30%;
+  min-width: 250px;
+}
+
+.subheader-container{
+  overflow:hidden;
 }
 
 ul {
@@ -104,10 +109,6 @@ ul {
 }
 
 @media only screen and (max-width: 360px) {
-.subheader{
-  width: 60%;
-}
-
   html, body {
   margin: 5px;
   padding: 0px;
@@ -115,12 +116,21 @@ ul {
   height: 100%;
 }
 
+.subheader{
+  width: 60%;
+}
+
 header{
   font-size: 1.3rem;
+  padding: 0px 5px;
 }
 
 .image {
   width: 150px;
+}
+
+h1{
+  padding: 0px 10px;
 }
 
 h2{
@@ -147,6 +157,10 @@ p{
   width: 70%; 
 }
 
+.subheader-container{
+   overflow: visible;
+}
+
 .barimage{
   width: 30px;
   height: 30px;
@@ -156,13 +170,11 @@ p{
 header, .leftbar{
   display: block;
   vertical-align: top;
-  
 }
 
  .leftbar{
   height: 260px;
   width: 93%;
-  vertical-align: center;
   }
 
 }
