--- a/style.css
+++ b/style.css
@@ -2,22 +2,27 @@ html, body {
   margin: 10px;
   padding: 0px;
   font-family: 'Fira Sans Extra Condensed';
-  height: 100%;
 }
 
 li {
   list-style-type: disc; 
-  padding: 2px;
-  font-size: 1em;
+  padding-bottom: 20px;
+  font-size: 1.1em;
+  letter-spacing: 1px;
 }
 
 ul{
-    padding-top: 30px;
+  padding-top: 20px;
+  margin-left: 30px;
+  margin-bottom: 15px;
+  padding-bottom: 15px;
+  padding-left: 60px;
 }
 
 header {
   font-size: 2rem;
-  background-color: #99ffdd;
+  background: linear-gradient(#99ffdd, #abf3fc);
+  border-radius: 10px;
   width: 100%;
   text-align: center;
   margin-bottom: 10px;
@@ -68,36 +73,36 @@ p {
 }
 
 .subheader {
-  background-color: #edfff4;
+  background: linear-gradient(#edfff4, #d3f9ff);
+  border-radius: 10px;
   margin-left: 30px;
   margin-bottom: 10px;
+  margin-top: 5px;
   padding-right: 70px;
   padding-left: 10px;
   float: left;
-  width: 30%;
+  width: 100%;
   min-width: 250px;
 }
 
-.subheader-container{
-  overflow:hidden;
-}
+.subheader-container {
+  overflow-x: hidden;
 
-ul {
-  margin-top: -15px;
-  margin-left: 30px;
-  margin-bottom: 15px;
-  padding-bottom: 15px;
 }
 
 .leftbar {
   background: #dddddd;
+  background: linear-gradient(#e5e3e3, #afafaf);
+  border-radius: 10px;
   float: left;
   height: 100%;
   width: 200px;
   font-size: 1.5rem;
   padding: 20px 10px;
+  margin-top: 5px;
   margin-bottom: 10px;
   display: block;
+  min-height: 850px;
 }
 
 .barimage {
@@ -116,24 +121,24 @@ ul {
   height: 100%;
 }
 
-.subheader{
+.subheader {
   width: 60%;
 }
 
-header{
+header {
   font-size: 1.3rem;
-  padding: 0px 5px;
+  padding: 5px;
 }
 
 .image {
   width: 150px;
 }
 
-h1{
+h1 {
   padding: 0px 10px;
 }
 
-h2{
+h2 {
   font-size: 1.3rem;
 }
 
@@ -142,39 +147,39 @@ h3 {
   letter-spacing: 2px;
 }
 
-p{
+p {
   font-size: 0.9rem;
   margin-bottom: 30px;
 }
 
-.subimage{
+.subimage {
   width: 30px;
   height: 30px;
 }
 
-.subheader{
+.subheader {
   margin: 5px;
-  width: 70%; 
 }
 
-.subheader-container{
-   overflow: visible;
+.subheader-container {
+  overflow: visible;
 }
 
-.barimage{
+.barimage {
   width: 30px;
   height: 30px;
   padding-top: 0;
 }
 
-header, .leftbar{
+header, .leftbar {
   display: block;
   vertical-align: top;
 }
 
- .leftbar{
+.leftbar {
   height: 260px;
   width: 93%;
+  min-height: 0;
   }
 
 }
