--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@ li {
   padding-bottom: 20px;
   font-size: 1.1em;
   letter-spacing: 1px;
+  
 }
 
 ul{
@@ -17,6 +18,9 @@ ul{
   margin-bottom: 15px;
   padding-bottom: 15px;
   padding-left: 60px;
+  columns: 2;
+  -webkit-columns: 2;
+  -moz-columns: 2;
 }
 
 header {
@@ -49,7 +53,7 @@ h1{
 
 h2 {
   color: black;
-  padding-left: 10px;
+  padding-left: 20px;
   font-size: 2rem;
   font-weight: 500;
 }
@@ -118,7 +122,7 @@ p {
   margin: 5px;
   padding: 0px;
   font-family: 'Fira Sans Extra Condensed';
-  height: 100%;
+  width: 100%;
 }
 
 .subheader {
@@ -140,6 +144,8 @@ h1 {
 
 h2 {
   font-size: 1.3rem;
+  font-weight: 600;
+  letter-spacing: 1px;
 }
 
 h3 {
@@ -161,6 +167,12 @@ p {
   margin: 5px;
 }
 
+ul{
+  columns: auto;
+  -webkit-columns: auto;
+  -moz-columns: auto;
+}
+
 .subheader-container {
   overflow: visible;
 }
@@ -178,7 +190,7 @@ header, .leftbar {
 
 .leftbar {
   height: 260px;
-  width: 93%;
+  width: 100%;
   min-height: 0;
   }
 
