--- a/style.css
+++ b/style.css
@@ -30,18 +30,12 @@ header {
   width: 100%;
   text-align: center;
   margin-bottom: 10px;
-  padding: 10px 0px;
+  padding: 50px 0px;
 }
 
-.image, h1 {
+h1 {
   display: inline-block;
   vertical-align: middle;
-}
-
-.image {
-  padding: 10px 0px;
-  border-radius: 50%;
-  padding-left: 20px;
 }
 
 h1{
@@ -119,11 +113,12 @@ p {
 
 @media only screen and (max-width: 360px) {
   html, body {
-  margin: 5px;
-  padding: 0px;
+  margin: 0;
+  padding: 0;
   font-family: 'Fira Sans Extra Condensed';
   width: 100%;
 }
+
 
 .subheader {
   width: 60%;
@@ -131,11 +126,9 @@ p {
 
 header {
   font-size: 1.3rem;
-  padding: 5px;
-}
+  padding: 10px;
+  width: 100;
 
-.image {
-  width: 150px;
 }
 
 h1 {
@@ -165,6 +158,7 @@ p {
 
 .subheader {
   margin: 5px;
+  width: 100px;
 }
 
 ul{
@@ -174,7 +168,7 @@ ul{
 }
 
 .subheader-container {
-  overflow: visible;
+  width: 100%;
 }
 
 .barimage {
@@ -189,7 +183,7 @@ header, .leftbar {
 }
 
 .leftbar {
-  height: 260px;
+  height: 290px;
   width: 100%;
   min-height: 0;
   }
